hphp/hack/test/typecheck/mixed_subtype.php.exp
File "mixed_subtype.php", line 11, characters 19-19:
Member A has the wrong type (Typing[4341])
File "mixed_subtype.php", line 5, characters 24-30:
Expected nothing
File "mixed_subtype.php", line 11, characters 24-28:
But got mixed
